fix: changed function name

--- a/Notebooks/detect_laser.ipynb
+++ b/Notebooks/detect_laser.ipynb
@@ -148,10 +148,8 @@
    ],
    "source": [
     "@interact\n",
-    "def show_articles_more_than(lh=(0,255), ls=(0,255), lv=(0,255), uh=(0,255), us=(0,255), uv=(0,255)):\n",
+    "def hsv_isolation(lh=(0,255), ls=(0,255), lv=(0,255), uh=(0,255), us=(0,255), uv=(0,255)):\n",
     "    img = cv2.imread(laser_samples[1])\n",
-    "\n",
-    "    img = cv2.\n",
     "\n",
     "    hsv = cv2.cvtColor(img, cv2.COLOR_BGR2HSV)\n",
     "    # define range of blue color in HSV\n",
