feat: edge detection test

--- a/Notebooks/detect_laser.ipynb
+++ b/Notebooks/detect_laser.ipynb
@@ -163,7 +163,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "e856e654",
+   "id": "7258bfbd",
    "metadata": {},
    "source": [
     "![hsv_extract_2.png](attachment:hsv_extract_2.png)"
@@ -219,7 +219,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "e0337af1",
+   "id": "9886e7a7",
    "metadata": {},
    "source": [
     "![hsv_extract_1.png](attachment:hsv_extract_1.png)"
@@ -230,7 +230,7 @@
    "id": "63236438",
    "metadata": {},
    "source": [
-    "## Idea 2. Subtraction method\n"
+    "## Idea 2. Isolate Red Channel\n"
    ]
   },
   {
@@ -250,16 +250,65 @@
    "id": "82052014",
    "metadata": {},
    "source": [
-    "## Idea 3. Gradients"
+    "## Idea 3. Edge Detection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "56319139",
+   "execution_count": 53,
+   "id": "3b537cdc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3f6cddd128de4acc992b649ec8382603",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=127, description='minval', max=255), IntSlider(value=127, description='m…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.5.2) :-1: error: (-5:Bad argument) in function 'Canny'\n> Overload resolution failed:\n>  - Argument 'threshold1' can not be treated as a double\n>  - Argument 'threshold1' can not be treated as a double\n>  - Canny() missing required argument 'threshold2' (pos 4)\n>  - Canny() missing required argument 'threshold2' (pos 4)\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-53-195a35d8fa18>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0medge_detect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-53-195a35d8fa18>\u001b[0m in \u001b[0;36medge_detect\u001b[0;34m(minval, maxval)\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;31m# Convert to binary image\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mret\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mthreshold\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m244\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m255\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0medges\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCanny\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mminval\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmaxval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfromarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0medges\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31merror\u001b[0m: OpenCV(4.5.2) :-1: error: (-5:Bad argument) in function 'Canny'\n> Overload resolution failed:\n>  - Argument 'threshold1' can not be treated as a double\n>  - Argument 'threshold1' can not be treated as a double\n>  - Canny() missing required argument 'threshold2' (pos 4)\n>  - Canny() missing required argument 'threshold2' (pos 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "@interact\n",
+    "def edge_detect(minval=(0,255), maxval=(0,255)):\n",
+    "\n",
+    "    # Load image\n",
+    "    img = cv2.imread(laser_samples[0])\n",
+    "    \n",
+    "    # Read only the red channel (remember BGR corresponds to B=0, G=1, R=2)\n",
+    "    r = img[...,2]\n",
+    "    \n",
+    "   \n",
+    "    # Convert to binary image\n",
+    "    ret,img = cv2.threshold(r,244,255,0)\n",
+    "    edges = cv2.Canny(img,minval,maxval)\n",
+    "    display(Image.fromarray(edges))    \n",
+    "    \n",
+    "    #img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+    "#     display(Image.fromarray(img))\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "edge_detect()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -271,14 +320,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "27a762d1",
+   "execution_count": 26,
+   "id": "818eec5e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ff65787aee346ff8d27c786ca06c693",
+       "model_id": "79bfc6c034554c8487d1f7b256f1490c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -324,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "488c9c70",
+   "id": "367067b6",
    "metadata": {},
    "source": [
     "## Pipeline 1. GaussianBlur --> HSV Thresholding --> skeletonization"
@@ -333,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "31863579",
+   "id": "5bf9451d",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +455,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "744b4edf",
+   "id": "3fe114e3",
    "metadata": {},
    "source": [
     "![pipeline1.png](attachment:pipeline1.png)"
@@ -415,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95927491",
+   "id": "5d4fbf1e",
    "metadata": {},
    "outputs": [],
    "source": []
