--- a/Notebooks/triangulate_laser_math.ipynb
+++ b/Notebooks/triangulate_laser_math.ipynb
@@ -1620,7 +1620,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1634,7 +1634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
